<resources>
    <string name="app_name">Address Book</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="Street">Street</string>
    <string name="City">City/State/Zip:</string>
    <string name="address">Address</string>
    <string name="button">Save contact</string>

</resources>
