<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1"
    tools:context=".EditContactActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".EditContactActivity"
        android:orientation="vertical">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="30sp"
            android:textColor="#fff"
            android:paddingBottom="30dp"
            android:paddingTop="20dp"
            android:text="Adress Book"
            />

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/userImage"
    android:src="@mipmap/avatar_empty"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="7dp"/>
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:background="@drawable/edit_border"
            android:layout_marginBottom="5dp"
            android:padding="15dp"
            >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Phone"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:background="@drawable/edit_border"
            android:layout_marginBottom="5dp"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"
            android:background="@drawable/edit_border"
            android:padding="15dp"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:paddingTop="30dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"

            />

        <EditText
            android:id="@+id/et_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Street"
            android:imeOptions="actionDone"
            android:background="@drawable/edit_border"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/City"
            android:imeOptions="actionDone"
            android:textSize="18sp"
            android:padding="15dp"
            android:background="@drawable/edit_border"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button"
            android:layout_marginTop="15dp"
            />

    </LinearLayout>
</ScrollView>